--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <header>
         <nav id="menu">
             <ul>
-                <li><a href="#"><i class="fa-solid fa-house"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-brain"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-graduation-cap"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-trowel-bricks"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-moon"></i></a></li>
+                <li><a href="#video" class="link"><i class="fa-solid fa-house"></i></a></li>
+                <li><a href="#skills" class="link"><i class="fa-solid fa-brain"></i></a></li>
+                <li><a href="#formacao" class="link"><i class="fa-solid fa-graduation-cap"></i></a></li>
+                <li><a href="#projetos" class="link"><i class="fa-solid fa-trowel-bricks"></i></a></li>
+                <li><a href="#" id="botao-tema"><i class="fa-solid fa-moon"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -236,7 +236,7 @@
                     <div class="curso">
                         <p class="periodo">2021 - 2024</p>
                         <h3 class="instituicao">Centro de Inteligência Artificial</h3>
-                        <p class="titulacao">Técnicas para aplicaçãi de IAs</p>
+                        <p class="titulacao">Técnicas para aplicação de IAs</p>
                     </div>
 
                 </div>
@@ -292,7 +292,7 @@
     </main>
 
     <footer>
-        Porfólio desenvolvido por <a href="https://www.cursoemvideo.com/" target="_blank">Curso em Vídeo</a> em 2025
+        Porfólio desenvolvido por <a href="https://www.cursoemvideo.com/" target="_blank" >Curso em Vídeo</a> em 2025
     </footer>
 
     <script src="scripts/script.js"></script>
